--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@ body {
     width: 300px;
     margin: auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #762f2f;
     border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: rgb(226, 225, 236);
 }
 
 form > label, form > input {
